#23 fixed lab layout on tablets

--- a/src/containers/lab/LabLayout/styles.module.scss
+++ b/src/containers/lab/LabLayout/styles.module.scss
@@ -4,6 +4,11 @@
   display: grid;
   grid-template-columns: 3fr 1fr;
   column-gap: $gap;
+
+  @include tablet {
+    grid-template-columns: 1fr;
+    grid-auto-flow: row;
+  }
 }
 
 .panel {
